<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/mapContainer"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/weatherDataTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fetching_weather"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/reservationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/reservationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time" />

        <TextView
            android:id="@+id/reservationPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
