<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:layout_marginTop="4dp"
    android:layout_marginHorizontal="8dp"
    android:elevation="4dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/reservationRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reservationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="@color/black"
            android:layout_marginTop="6dp" />

        <TextView
            android:id="@+id/reservationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="@color/black"
            android:layout_marginTop="2dp" />

        <TextView
            android:id="@+id/reservationPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="@color/black"
            android:layout_marginTop="2dp" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
